# inspector_alert_tools

./: .gitignore  Makefile.am  README.md  configure.ac
include/: insp_device.h  insp_log.h
src/inspect_mon/: Makefile.am  inspect_mon.c
src/lib/: Makefile.am  insp_device.c  insp_log.c
