SUBDIRS = src/lib src/inspect_mon



# MLW - this will clean up all non-git tracked files, including the .gitignored files.
#       This can be used to make a truely clean tree., and after an autoreconf --install, 
#          this may be delivered as a source package.... 

git_clean: 
	git clean -x -f -d

.PHONY: git_clean

	
